添加商品分类，商品接口
